fix text align

--- a/src/components/wechat/chat/assets/css/message.module.css
+++ b/src/components/wechat/chat/assets/css/message.module.css
@@ -11,6 +11,7 @@
     max-width: 70%;
     border-radius: 5px;
     cursor: pointer;
+    text-align: left;
 }
 
 .message:hover {
